// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageMainContent /> should render correctly 1`] = `
<ProposalPageMainContent__ProposalPageMainContentContainer
  id="ProposalPageMainContent"
>
  <Relay(ProposalPageFusionInformations)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageOfficialAnswer)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageDescription)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageLocalisation))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageCustomSections))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageMainAside))
    display={false}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageNews)
    goToBlog={[MockFunction]}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageDiscussions)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
</ProposalPageMainContent__ProposalPageMainContentContainer>
`;

exports[`<ProposalPageMainContent /> should render correctly whith analysis 1`] = `
<ProposalPageMainContent__ProposalPageMainContentContainer
  id="ProposalPageMainContent"
>
  <Relay(ProposalPageFusionInformations)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageOfficialAnswer)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageDescription)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageLocalisation))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageCustomSections))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageMainAside))
    display={true}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageNews)
    goToBlog={[MockFunction]}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageDiscussions)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
</ProposalPageMainContent__ProposalPageMainContentContainer>
`;

exports[`<ProposalPageMainContent /> should render correctly with tipsmeeee 1`] = `
<ProposalPageMainContent__ProposalPageMainContentContainer
  id="ProposalPageMainContent"
>
  <Relay(ProposalPageFusionInformations)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageOfficialAnswer)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageDescription)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageLocalisation))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <ProposalPageTopDonators
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageCustomSections))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(Connect(ProposalPageMainAside))
    display={false}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageNews)
    goToBlog={[MockFunction]}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
  <Relay(ProposalPageDiscussions)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "proposal1",
      }
    }
  />
</ProposalPageMainContent__ProposalPageMainContentContainer>
`;
